fixed gallery too big

--- a/main.css
+++ b/main.css
@@ -121,11 +121,11 @@ nav ul li a:visited {
   width: 60%;
   height: 60%;
   margin: auto;
+  background-color: black;
+  border-radius: 30px;
 }
 
 .gallery img{
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  cursor: pointer;
+  height: 85vh;
+  object-fit: contain;
 }
